--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -73,6 +73,8 @@ on boot
     # Bluetooth
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/state
+	chown system system /sys/module/radio_iris_transport/parameters/fmsmd_set
+	chmod 0660 /sys/module/radio_iris_transport/parameters/fmsmd_set
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chown bluetooth net_bt /dev/ttyHS0
     chmod 0660 /dev/ttyHS0
