--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -7,15 +7,11 @@
 gEnableImps=1
 
 # Enable/Disable Idle Scan
-
 gEnableIdleScan=0
-
-# Enable/Disable vsta based on MAX Assoc limit
-gEnableVSTASupport=1
 
 
 # Increase sleep duration (seconds) during IMPS
-# 0 implies no periodic wake up from IMPS. Periodic wakeup is
+# 0 implies no periodic wake up from IMPS. Periodic wakeup is 
 # unnecessary if Idle Scan is disabled.
 gImpsModSleepTime=0
 
@@ -31,6 +27,8 @@ gEnableSuspend=3
 
 # Phy Mode (auto, b, g, n, etc)
 # Valid values are 0-9, with 0 = Auto, 4 = 11n, 9 = 11ac
+# 1 = 11abg, 2 = 11b, 3 = 11g, 5 = 11g only, 6 = 11n only
+# 7 = 11b only 8 = 11ac only.
 gDot11Mode=0
 
 
@@ -84,16 +82,24 @@ gNthBeaconFilter=50
 
 # 2: Filter all Broadcast. 3: Filter all Mcast abd Bcast
 
-McastBcastFilter=2
+McastBcastFilter=3
 
 
 #Flag to enable HostARPOffload feature or not
 
 hostArpOffload=1
 
+#Flag to enable TCPChkSumOffld feature or not
+
+gEnableTCPChkSumOffld=1
 
 #Flag to enable HostNSOffload feature or not
-hostNSOffload=0
+
+hostNSOffload=1
+
+#Flag to enable IPChkSumOffld feature or not
+
+gEnableIPChecksumOffload=1
 
 #SoftAP Related Parameters
 
@@ -109,12 +115,12 @@ gEnableApProt=1
 
 #Enable OBSS protection
 
-gEnableApOBSSProt=0
+gEnableApOBSSProt=1
 
 
 #Enable/Disable UAPSD for SoftAP
 
-gEnableApUapsd=0
+gEnableApUapsd=1
 
 
 # Fixed Rate
@@ -134,7 +140,7 @@ gFixedRate=0
 
 # RTS threshold
 
-RTSThreshold=2347
+RTSThreshold=1048576
 
 
 # Intra-BSS forward
@@ -152,12 +158,19 @@ WmmIsEnabled=0
 g11dSupportEnabled=0
 
 # 802.11h support
+
 g11hSupportEnabled=1
 
+# DFS Master Capability
+gEnableDFSMasterCap=1
+
+
+
 # ESE Support and fast transition
+
 EseEnabled=1
 ImplicitQosIsEnabled=0
-gNeighborScanTimerPeriod=50
+gNeighborScanTimerPeriod=200
 
 gNeighborLookupThreshold=76
 gNeighborReassocThreshold=81
@@ -174,9 +187,19 @@ FastRoamEnabled=1
 #Check if the AP to which we are roaming is better than current AP in terms of RSSI.
 #Checking is disabled if set to Zero.Otherwise it will use this value as to how better 
 #the RSSI of the new/roamable AP should be for roaming
-RoamRssiDiff=5
+RoamRssiDiff=3
 
-#SAP Country code
+# If the RSSI of any available candidate is better than currently associated
+# AP by at least gImmediateRoamRssiDiff, then being to roam immediately (without
+# registering for reassoc threshold).
+# NOTE: Value of 0 means that we would register for reassoc threshold.
+gImmediateRoamRssiDiff=10
+
+# To enable, set gRoamIntraBand=1 (Roaming within band)
+# To disable, set gRoamIntraBand=0 (Roaming across band)
+gRoamIntraBand=0
+
+# SAP Country code
 
 # Default Country Code is 2 bytes, 3rd byte is optional indoor or out door.
 
@@ -204,14 +227,8 @@ gShortGI40Mhz=1
 
 gAPAutoShutOff=0
 
-
-# SAP auto channel selection configuration
-
-# 0 = disable auto channel selection
-
-# 1 = enable auto channel selection, channel provided by supplicant will be ignored
-
-gApAutoChannelSelection=0
+#Auto Shutdown wlan : Value in Seconds. 0 means disabled. Max 1 day = 86400 sec
+gWlanAutoShutdown = 0
 
 
 # Listen Energy Detect Mode Configuration
@@ -251,11 +268,6 @@ gApAutoChannelSelection=0
 gEnablePhyAgcListenMode=128
 
 
-#Preferred channel to start BT AMP AP mode (0 means, any channel)
-
-BtAmpPreferredChannel=0
-
-
 #Preferred band (both or 2.4 only or 5 only)
 
 BandCapability=0
@@ -263,27 +275,9 @@ BandCapability=0
 
 #Beacon Early Termination (1 = enable the BET feature, 0 = disable)
 
-enableBeaconEarlyTermination=1
+enableBeaconEarlyTermination=0
 
-beaconEarlyTerminationWakeInterval=11
-
-#Bluetooth Alternate Mac Phy (1 = enable the BT AMP feature, 0 = disable)
-
-gEnableBtAmp=0
-
-
-#SOFTAP Channel Range selection 
-
-gAPChannelSelectStartChannel=1
-
-gAPChannelSelectEndChannel=11
-
-
-#SOFTAP Channel Range selection Operating band
-
-# 0:2.4GHZ 1: LOW-5GHZ 2:MID-5GHZ 3:HIGH-5GHZ 4: 4.9HZ BAND
-
-gAPChannelSelectOperatingBand=0
+beaconEarlyTerminationWakeInterval=3
 
 
 #Channel Bonding
@@ -292,8 +286,7 @@ gChannelBondingMode5GHz=1
 
 #Enable Keep alive with non-zero period value
 
-gStaKeepAlivePeriod=30
-
+gStaKeepAlivePeriod = 30
 
 #Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
 #For every 10 seconds DUT send Qos Null frame(i.e., Keep Alive frame if link is idle for last 10 seconds.)
@@ -309,16 +302,17 @@ gStaKeepAlivePeriod=30
 #gGoLinkMonitorPeriod/ gApLinkMonitorPeriod is period where link is idle and it is period
 #where we send NULL frame.
 
-gApLinkMonitorPeriod=30
+gApLinkMonitorPeriod = 30
 
-gGoLinkMonitorPeriod=10
+gGoLinkMonitorPeriod = 10
 
 #gGoKeepAlivePeriod/gApKeepAlivePeriod is time to spend to check whether frame are succeed to send or not.
 #Hence total effective detection time is gGoLinkMonitorPeriod+ gGoKeepAlivePeriod/gApLinkMonitorPeriod+ gApKeepAlivePeriod.
 
-gGoKeepAlivePeriod=3
 
-gApKeepAlivePeriod=10
+gGoKeepAlivePeriod = 3
+
+gApKeepAlivePeriod = 10
 
 
 #If set will start with active scan after driver load, otherwise will start with
@@ -332,15 +326,16 @@ gEnableBypass11d=1
 
 gEnableDFSChnlScan=1
 
-gListOfNonDfsCountryCode=JO
+# Enable DFS channel roam
+# 0: DISABLE, 1: ENABLED_NORMAL, 2: ENABLED_ACTIVE
+gAllowDFSChannelRoam=1
 
 gVhtChannelWidth=2
-gEnableLogp=1
 
 
 # Enable Automatic Tx Power control
 
-gEnableAutomaticTxPowerControl=0
+gEnableAutomaticTxPowerControl=1
 
 # 0 for OLPC 1 for CLPC and SCPC
 gEnableCloseLoop=1
@@ -354,12 +349,62 @@ gDataInactivityTimeout=200
 gVhtRxMCS=2
 gVhtTxMCS=2
 
+# VHT Tx/Rx MCS values for 2x2
+# Valid values are 0,1,2. If commented out, the default value is 0.
+# 0=MCS0-7, 1=MCS0-8, 2=MCS0-9
+gVhtRxMCS2x2=2
+gVhtTxMCS2x2=2
+
+
+# Valid chain mask values
+# 01 - enables chain0
+# 02 - enables chain1
+# 03 - enables both chain 0 and chain 1
+# if set to 0 or 1 then all vdevs comes up in 1x1 mode in that band.
+gChainMask_2g=3
+gChainMask_5g=3
+
+# NSS cfg bit definition.
+# STA          BIT[0:1]
+# SAP          BIT[2:3]
+# P2P_GO       BIT[4:5]
+# P2P_CLIENT   BIT[6:7]
+# IBSS         BIT[8:9]
+# TDLS         BIT[10:11]
+# P2P_DEVICE   BIT[12:13]
+# OCB          BIT[14:15]
+# Valid values are 1 or 2 for each two bit configuration.
+# if 2-bit value is set to 1 then the corresponidng vdev comes up in 1x1 mode
+# in the band, if set to 2 then that vdev comes up in 2x2 mode in that band.
+gVdevTypeNss_2g=43690
+gVdevTypeNss_5g=43690
+
+# Scan Timing Parameters
+# gPassiveMaxChannelTime=110
+# gPassiveMinChannelTime=60
+gActiveMaxChannelTime=80
+gActiveMinChannelTime=40
 
 #If set to 0, MCC is not allowed.
 gEnableMCCMode=1
 
+# MCC to SCC Switch mode: 0-Disable 1-Enable 2-Force SCC if same band
+gWlanMccToSccSwitchMode = 0
+
 # 1=enable STBC; 0=disable STBC 
 gEnableRXSTBC=1
+
+# 1=enable tx STBC; 0=disable
+gEnableTXSTBC=1
+
+# 1=enable rx LDPC; 0=disable
+gEnableRXLDPC=1
+
+# Enable Tx beamforming in VHT20MHz
+# Valid values are 0,1. If commented out, the default value is 0.
+# 0=disable, 1=enable
+gEnableTxBFin20MHz=0
+gTxBFEnable=0
 
 # Enable Active mode offload
 gEnableActiveModeOffload=1
@@ -369,16 +414,16 @@ gEnableActiveModeOffload=1
 #If Set to 0 it will not enable the feature
 gScanAgingTime=0
 
+#Enable Scan Results Aging based on number of scans
+gScanResultAgeCount=3
+
 #Enable Power saving mechanism Based on Android Framework
 #If set to 0 Driver internally control the Power saving mechanism
 #If set to 1 Android Framwrok control the Power saving mechanism
 isAndroidPsEn=0
 
-#disable LDPC in STA mode if the AP is TXBF capable
-gDisableLDPCWithTxbfAP=1
-
 #Enable thermal mitigation
-gThermalMitigationEnable=1
+gThermalMitigationEnable=0
 
 gEnableFastRoamInConcurrency=1
 
@@ -387,7 +432,7 @@ gEnableFastRoamInConcurrency=1
 gListOfNon11acCountryCode=RU,UA,ZA
 
 #Maxium Channel time in msec
-gMaxMediumTime = 5480
+gMaxMediumTime = 6000
 
 # 802.11K support
 gRrmEnable=1
@@ -396,115 +441,273 @@ gRrmNonOperChanMax=8
 gRrmRandIntvl=100
 
 #Scan offload
-gEnableDirectedScanOffload=0
+gEnableDirectedScanOffload=1
 
 #FlexConnect Power Factor
 #Default is set to 0 (disable)
 gFlexConnectPowerFactor=0
 
-#SAP/P2P-GO mode traffic monitor
-gEnableTrafficMonitor=1
-gTrafficIdleTimeout=3000
+#Disable split scan, the FW will take care of it
+gNumChanCombinedConc=60
 
-#Disable/Enable Strict FCC Regulatory
-# 0 to disable, 1 to enable
-gEnableStrictRegulatoryForFCC=1
+#Enable Power Save offload
+gEnablePowerSaveOffload=2
 
-#Enable/Disable Modulated DTIM feature
-gEnableModulatedDTIM=3
+#Enable firmware uart print
+gEnablefwprint=0
 
-#max LI value for modulated DTIM
-gMaxLIModulatedDTIM=3
+#Enable firmware log
+gEnablefwlog=1
+# Additional firmware log levels
+#gFwDebugLogLevel=4
+#gFwDebugModuleLoglevel=1,0,2,0,4,0,5,0,6,0,7,4,8,0,9,0,11,0,13,0,17,0,18,0,19,0,27,0,29,0,31,0,35,0,36,0,38,0
 
-#Enable/Disable Link Layer Statistics Feature
-gEnableLLStats=1
+#IPA config
+gIPAConfig=0
+gIPADescSize=800
+gIPAPreFilterEnable=1
+gIPARMEnable=1
+gIPAIPv6Enable=1
 
-#Enable/Disable EXTScan Feature
-gEnableEXTScan=1
+#P2P Listen offload
+gEnableP2pListenOffload=1
 
-# Enable/Disable Mcast addr list filtering
-# isMcAddrListFilter deprecated
-gMCAddrListEnable=1
+# Maximum MPDU length (VHT only. Valid values: 0->3895 octets, 1->7991 octets, 2->11454 octets)
+gVhtMpduLen=2
 
-# TDLS setting
-gEnableTDLSSupport=1
-gEnableTDLSImplicitTrigger=1
-gEnableTDLSBufferSta=0
-gTDLSMaxDiscoveryAttempt=5
-gTDLSIdleTimeout=10000
+# Maximum number of wow filters required
+#gMaxWoWFilters=22
 
-# Country code priority
-gCountryCodePriority=1 
+# WOW Enable/Disable.
+# 0 - Disable both magic pattern match and pattern byte match.
+# 1 - Enable magic pattern match on all interfaces.
+# 2 - Enable pattern byte match on all interfaces.
+# 3 - Enable both magic patter and pattern byte match on all interfaces.
+# Default value of gEnableWoW is 3.
+# gEnableWoW=0
 
-#blocking SCO rate as 0% from 1%
-btcMaxScoBlockPerc=0
+# Enable or Disable MCC Adaptive Scheduler at the FW
+# 1=Enable (default), 0=Disable
+gEnableMCCAdaptiveScheduler=1
 
-# Scan Timing Parameters
-gActiveMaxChannelTime=80
-gActiveMinChannelTime=60
+#Enable or Disable p2p device address administered
+isP2pDeviceAddrAdministrated=1
 
-#Enable Scan Results Aging based on number of scans
-gScanResultAgeCount=1
+# RX packet handling options
+# 0: no rx thread, no RPS, for MDM
+# 1: RX thread
+# 2: RPS
+rxhandle=1
 
-#To enable CTS2S during SCO in WCN cfg ini 
-btcCTS2SduringSCO=1
+# Set RPS CPU MAP as 0xe for the 4 RX queues
+# This allows use of CPU1-CPU3 but not CPU0 for 4 RX queues
+rpsRxQueueCpuMapList=c
 
-#BTC OPP+SAP/GO configuration
-btcSapActiveWlanLen=35000 
-btcSapActiveBtLen=20000
+# Set Thermal Power limit
+TxPower2g=20
+TxPower5g=18
 
-#BTC BT paging configuration
-btcStaticLenPageBt=135000
-btcStaticLenPageWlan=15000
+# Remove Overlap channel restriction
+gEnableOverLapCh=0
 
-#BT_OPP+STA coex configuration WLAN 35ms/BT_OPP 30ms
-btcActiveWlanLen=35000
-btcActiveBtLen=30000
+#Enable VHT on 2.4Ghz
+gEnableVhtFor24GHzBand=1
 
-#change the value of heart threat time
-gHeartbeat24=60
+#Enable or Disable 5G early beacon termination
+gEnable5gEBT=1
 
-#Disable Preferred Network Offload feature
+#Maximum number of offload peers supported
+# gMaxOffloadPeers=2
+
+# controlling the following offload patterns
+# through ini parameter. Default value is 1
+# to disable set it to zero. ssdp = 0
+# Setup multicast pattern for mDNS 224.0.0.251,
+# SSDP 239.255.255.250 and LLMNR 224.0.0.252
+ssdp = 0
+
+#Enable Memory Deep Sleep
+gEnableMemDeepSleep=1
+
+# Bus bandwidth threshold values in terms of number of packets
+gBusBandwidthHighThreshold=2000
+gBusBandwidthMediumThreshold=500
+gBusBandwidthLowThreshold=150
+
+# IPA bandwidth voting
+gIPAHighBandwidthMbps=800
+gIPAMediumBandwidthMbps=400
+gIPALowBandwidthMbps=200
+
+# Bus bandwidth compute timeout value in ms
+gBusBandwidthComputeInterval=100
+
+# Regulatory Setting; 0=STRICT; 1=CUSTOM
+gRegulatoryChangeCountry=1
+# RA filtering rate limit param, the current value would not
+# help if the lifetime in RA is less than 3*60=3min. Then
+# we need to change it, though it is uncommon.
+gRAFilterEnable=1
+gRArateLimitInterval=600
+
+# Maximum number of concurrent connections
+gMaxConcurrentActiveSessions=2
+
+# Disable/Enable GreenAP
+# 0 to disable, 1 to enable, default: 1
+gEnableGreenAp=1
+
+# Radar PRI multiplier
+gDFSradarMappingPriMultiplier=4
+
 gPNOScanSupport=0
 
-# Roam Scan offload
-gRoamScanOffloadEnabled=1
+# Enable/Disable RX full reorder offload
+gReorderOffloadSupported=1
 
-# For p2p device's DTIM policy
-gIgnoreDynamicDtimInP2pMode=1
+# Enable/Disable LPASS support
+# 0 to disable, 1 to enable
+gEnableLpassSupport=1
 
-# Maintain SCO quality irrespective of WLAN connection time
-gBtcFastWlanConnPref=0
+# Whether userspace country code setting shld have priority
+gCountryCodePriority=1
 
-#Enable/Disable RTS-CTS for HT,VHT
-#Bit mask value to enable RTS/CTS for different modes
-#For 2.4 GHz, HT20 - 0x0001 i.e 1, for 2.4 GHz, HT40 - 0x0002 i.e 2
-#For 2.4 GHz, VHT20 - 0x0004 i.e 4, for 2.4 GHz, VHT40 - 0x0008 i.e 8
-#For 5 GHz, HT20 - 0x0100 i.e 256, for 5 GHz, HT40 - 0x0200 i.e 512
-#For 5 GHz, VHT20 - 0x0400 i.e 1024, for 5 GHz, VHT40 - 0x0800 i.e 2048
-#For 5 GHz, VHT80 - 0x1000 i.e 4096
-#Can be enabled for multiple modes
-#For enabling in both HT20 and HT40 of 2.4 GHz - 0x0003 i.e 3
-#Default is set to 0 (disable)
-gEnableRtsCtsHtVht=0
+# Enable(1)/Disable(0) SIFS burst
+gEnableSifsBurst=3
 
-#About 'Ptt Socket error sending message to the app' log
-gMulticastHostMsgs=0
+# Enable/Disable channel avoidance for SAP in SCC scenario
+# 0 - disable
+# 1 - enable
+gSapSccChanAvoidance=0
 
-#About 'send_fw_log_pkt_to_user: Send Failed -3 drop_count' log
-wlanLoggingEnable=0
+# Inactivity time (in ms) to end TX Service Period while in IBSS power save mode
+gIbssTxSpEndInactivityTime=10
 
-#about TCP delayed ack driver 
-gEnableDelAck=1 
-gTcpDelAckComputeInterval=2000 
-gTcpDelAckThresholdHigh=3000 
-gTcpDelAckThresholdLow=2000
+# Enable/Disable Roaming Offload Support (a.k.a Key Management Offload)
+# 0 to disable, 1 to enable
+gRoamOffloadEnabled=0
 
-#Coex Configuration for OPP + WLAN idle case 
-#Default BT 40ms, WLAN 40ms 
-#Change BT 120ms, WLAN 30ms 
-gBtcStaticOppWlanIdleWlanLen=30000 
-gBtcStaticOppWlanIdleBtLen=120000 
+# Enable support for TDLS
+#  0 - disable
+#  1 - enable
+gEnableTDLSSupport=1
+
+# Enable support for Implicit Trigger of TDLS. That is, wlan driver shall
+# initiate TDLS Discovery towards a peer whenever setup criteria (throughput
+# and RSSI) is met and then will initiate teardown when teardown criteria
+# (idle packet count and RSSI) is met.
+#  0 - disable
+#  1 - enable
+gEnableTDLSImplicitTrigger=1
+
+# Enable TDLS External Control. That is, user space application has to
+# first configure a peer MAC in wlan driver towards which TDLS is desired.
+# Device will establish TDLS only towards those configured peers whenever
+# TDLS criteria (throughput and RSSI threshold) is met and teardown TDLS
+# when teardown criteria (idle packet count and RSSI) is met. However,
+# device will accept TDLS connection if it is initiated from any other peer,
+# even if that peer is not configured.
+#  0 - disable
+#  1 - enable
+# For TDLS External Control, Implicit Trigger must also be enabled.
+gTDLSExternalControl=1
+
+# Enable support for TDLS off-channel operation
+#  0 - disable
+#  1 - enable
+# TDLS off-channel operation will be invoked when there is only one
+# TDLS connection.
+gEnableTDLSOffChannel=1
+
+IpaUcOffloadEnabled=1
+gIpaUcStaOffload=1
+
+gEnableSelfRecovery=1
+
+# Enable or Disable Random MAC (Spoofing)
+# 1=Enable, 0=Disable (default)
+gEnableMacAddrSpoof=0
+
+# Enable Auto suspend feature
+# When this feature is enabled, it will shutdown the PCIe link
+# when inactivity is detected in STA disconnected mode.
+#  0 - disable
+#  1 - enable
+gEnableBusAutoSuspend=0
+
+# Enable Runtime PM Feature.
+# Enabling this feature will put target wow and shutdown pcie link
+# when inactivity is detected in WLAN Driver.
+# This feature is inactive when beaconing interfaces are active with
+# clients associated.
+# 0 - disable
+# 1 - enable
+
+gRuntimePM=1
+# When gRuntimePM is disabled gRuntimeAutoTime won't take effect.
+# The Time is in msec.
+# 100 is min, 10000 is max, 500 is default.
+
+gRuntimePMDelay=500
+
+# Enable to check FW hash if secure FW feature is enabled. It's for defconfig
+# builds only since it will be ignored in performance/release builds.
+gEnableFWHashCheck=1
+
+# Enable FW to filter out broadcast packets and wakeup host during runtime PM.
+# As APPS is awake during runtime PM, if any application needs the broadcast
+# packets OEM's can enable this flag.
+# FW will filters the broadcast packets and wakeup host to deliver them during
+# runtime suspend.
+# This flag will take affect when Runtime PM is enabled
+gRuntimePmEnableBcastPattern=0
+
+# Enable/disable 2x2
+# 0 - 1x1 (default)
+# 1 - 2x2
+gEnable2x2=1
+
+# 3=enable both HT/VHT TX LDPC
+# 2=enable VHT TX LDPC
+# 1=enable HT TX LDPC
+# 0=disable
+gTxLdpcEnable=3
+
+# Maximum Receive AMPDU size (VHT only. Valid values: 0->8k 1->16k 2->32k 3->64k 4->128k)
+gVhtAmpduLenExponent=7
+
+# SAP auto channel selection configuration
+# 0 = disable auto channel selection
+# 1 = enable auto channel selection, channel provided by supplicant will be ignored
+gApAutoChannelSelection=0
+
+#SOFTAP Channel Range selection
+gAPChannelSelectStartChannel=1
+
+gAPChannelSelectEndChannel=11
+
+
+#SOFTAP Channel Range selection Operating band
+# 0:2.4GHZ 1: LOW-5GHZ 2:MID-5GHZ 3:HIGH-5GHZ 4: 4.9HZ BAND
+gAPChannelSelectOperatingBand=0
+
+# Enable or Disable Multi-user MIMO
+# 1=Enable (default), 0=Disable
+gEnableMuBformee=1
+
+gMulticastHostFwMsgs=0
+
+gSoftApMaxPeers=10
+
+# To support Multicast filtering
+gMCAddrListEnable=1
+
+#Enable Modulated DTIM
+gEnableModulatedDTIM=3
+
+#Enable 2Tx with BT operation
+gTxChainMask1ss=0 
+
 
 END
 
